<resources>
    <string name="app_name">Labb4</string>
    <string name="menu">Menu</string>
    <string name="hangman">HangMan Game</string>
    <string name="play">Play</string>
    <string name="about">About</string>


    <string name="programmed_by_atlal">Programmed by Atlal</string>

    <string name="game">Game</string>
    <string name="lives">Lives:</string>
    <string name="guess">Guess</string>
    <string name="guess_a_letter">Guess a letter</string>

    <string name="guess_a_char">Guess a char</string>
    <string name="the_word_was">The Word was:</string>
    <string name="lives_is">Lives is:</string>
    <string name="liv">Lives :</string>


</resources>